--- a/manipulation/map2016/output/hlm_UCM.html
+++ b/manipulation/map2016/output/hlm_UCM.html
@@ -33,24 +33,24 @@
     <TD width="75%" align="right">HLM2S.EXE (7.01.21202.1001)</TD></TR>
   <TR>
     <TD width="25%">Date:</TD>
-    <TD width="75%" align="right">20 October 2016, Thursday</TD></TR>
+    <TD width="75%" align="right">30 October 2016, Sunday</TD></TR>
   <TR>
     <TD width="25%">Time:</TD>
-    <TD width="75%" align="right">23:44:11</TD></TR></TBODY></TABLE>
+    <TD width="75%" align="right">18: 7: 8</TD></TR></TBODY></TABLE>
 <HR>
 </H2><BR><BR>
 <H2>Specifications for this HLM2 run</H2>  Problem Title: no title<BR><BR>  The 
-data source for this run  = map<BR>  The command file for this run = 
+data source for this run  = map_sample<BR>  The command file for this run = 
 C:\Users\Rebecca\AppData\Local\Temp\whlmtemp.hlm<BR>  Output file name           
    = 
 C:\Users\Rebecca\Documents\GitHub\psy564_longitudinal_models\data\unshared\derived\map2016\hlm2.html<BR> 
  The maximum number of level-1 units = 2396<BR>  The maximum number of level-2 
 units = 252<BR>  The maximum number of iterations = 100<BR><BR>  Method of 
-estimation: restricted maximum likelihood<BR><BR>  The outcome variable is     
-MMSE    <BR>
+estimation: restricted maximum likelihood<BR><BR>  The outcome variable is       
+WM    <BR>
 <H3>Summary of the model specified</H3>
 <H4>Level-1 Model</H4>
-&nbsp;&nbsp;&nbsp;&nbsp;<I>MMSE</I><SUB><SMALL><I>ti</I></SMALL></SUB> = 
+&nbsp;&nbsp;&nbsp;&nbsp;<I>WM</I><SUB><SMALL><I>ti</I></SMALL></SUB> = 
 <I>π</I><SUB><SMALL><I>0i</I></SMALL></SUB> + 
 <I>e</I><SUB><SMALL><I>ti</I></SMALL></SUB> <BR>
 <H4>Level-2 Model</H4>
@@ -58,18 +58,18 @@ MMSE    <BR>
 <I>β</I><SUB><SMALL><I>00</I></SMALL></SUB> + 
 <I>r</I><SUB><SMALL><I>0i</I></SMALL></SUB><BR>
 <H4>Mixed Model</H4>
-&nbsp;&nbsp;&nbsp;&nbsp;<I>MMSE</I><SUB><SMALL><I>ti</I></SMALL></SUB> = 
+&nbsp;&nbsp;&nbsp;&nbsp;<I>WM</I><SUB><SMALL><I>ti</I></SMALL></SUB> = 
 <I>β</I><SUB><SMALL><I>00</I></SMALL></SUB>&nbsp; + 
 <I>r</I><SUB><SMALL><I>0i</I></SMALL></SUB>+ 
 <I>e</I><SUB><SMALL><I>ti</I></SMALL></SUB><BR><BR>Run-time deletion has reduced 
-the number of level-1 records to 2347 <BR><BR>
-<H2>Final Results - Iteration 5</H2><B>Iterations stopped due to small change in 
-likelihood function</B><BR><BR>σ<SUP>2</SUP> =     14.06490<BR><BR>τ
+the number of level-1 records to 2326 <BR><BR>
+<H2>Final Results - Iteration 4</H2><B>Iterations stopped due to small change in 
+likelihood function</B><BR><BR>σ<SUP>2</SUP> =      0.27490<BR><BR>τ
 <TABLE border="0" cellpadding="0">
   <TBODY>
   <TR>
     <TD>INTRCPT1,<I>π</I><SUB><SMALL><I>0</I></SMALL></SUB>&nbsp;&nbsp;</TD>
-    <TD align="right">&nbsp;&nbsp;     9.68166</TD></TR></TBODY></TABLE><BR>
+    <TD align="right">&nbsp;&nbsp;     0.46933</TD></TR></TBODY></TABLE><BR>
 <TABLE style="border: currentColor; border-image: none; border-collapse: collapse;" 
 border="1" cellpadding="3">
   <TBODY>
@@ -82,8 +82,8 @@ border="1" cellpadding="3">
   <TR>
     <TD style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
       INTRCPT1,<I>π</I><SUB><SMALL><I>0</I></SMALL></SUB>
-    <TD align="center" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">0.840</TD></TR></TBODY></TABLE>
-The value of the log-likelihood function at iteration 5 = -6.675356E+003<BR>
+    <TD align="center" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">0.926</TD></TR></TBODY></TABLE>
+The value of the log-likelihood function at iteration 4 = -2.142672E+003<BR>
 <H4> Final estimation of fixed effects:<BR></H4>
 <TABLE style="border: currentColor; border-image: none; border-collapse: collapse;" 
 border="1" cellpadding="3">
@@ -106,13 +106,13 @@ border="1" cellpadding="3">
     <TD style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&nbsp;&nbsp;&nbsp;&nbsp;INTRCPT2, 
       <I>β</I><SUB><SMALL><I>00</I></SMALL></SUB> </TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-         26.713768</TD>
+         -0.015811</TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-       0.213884</TD>
+       0.044851</TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-      124.899</TD>
+       -0.353</TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">251</TD>
-    <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&lt;0.001</TD></TR></TBODY></TABLE><BR>
+    <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">0.725</TD></TR></TBODY></TABLE><BR>
 <H4> Final estimation of fixed effects<BR> (with robust standard errors) </H4>
 <TABLE style="border: currentColor; border-image: none; border-collapse: collapse;" 
 border="1" cellpadding="3">
@@ -135,13 +135,13 @@ border="1" cellpadding="3">
     <TD style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&nbsp;&nbsp;&nbsp;&nbsp;INTRCPT2, 
       <I>β</I><SUB><SMALL><I>00</I></SMALL></SUB> </TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-         26.713768</TD>
+         -0.015811</TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-       0.213455</TD>
+       0.044761</TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-      125.150</TD>
+       -0.353</TD>
     <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">251</TD>
-    <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&lt;0.001</TD></TR></TBODY></TABLE><BR>
+    <TD align="right" valign="bottom" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">0.724</TD></TR></TBODY></TABLE><BR>
 <H4>Final estimation of variance components</H4>
 <TABLE style="border: currentColor; border-image: none; border-collapse: collapse;" 
 border="1" cellpadding="3">
@@ -159,24 +159,23 @@ border="1" cellpadding="3">
     <TD align="right" style="padding: 0in 5.4pt; border: currentColor; border-image: none;"> 
       INTRCPT1, <I>r</I><SUB><SMALL><I>0</I></SMALL></SUB></TD>
     <TD align="right" style="padding: 0in 5.4pt; border: currentColor; border-image: none;"> 
-          3.11154</TD>
+          0.68508</TD>
     <TD align="right" style="padding: 0in 5.4pt; border: currentColor; border-image: none;"> 
-          9.68166</TD>
+          0.46933</TD>
     <TD align="right" style="padding: 0in 5.4pt; border: currentColor; border-image: none;"> 
       251</TD>
     <TD align="right" style="padding: 0in 5.4pt; border: currentColor; border-image: none;"> 
-       1975.30711</TD>
+       4126.89540</TD>
     <TD align="right" style="padding: 0in 5.4pt; border: currentColor; border-image: none;">&lt;0.001</TD></TR>
   <TR>
     <TD align="right" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">level-1, 
       <I>e</I></TD>
     <TD align="right" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-          3.75032</TD>
+          0.52431</TD>
     <TD align="right" style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;"> 
-         14.06490</TD>
+          0.27490</TD>
     <TD style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&nbsp;</TD>
     <TD style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&nbsp;</TD>
     <TD style="border-width: medium medium 1.5pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 5.4pt; border-image: none;">&nbsp;</TD></TR></TBODY></TABLE>
 <H4>Statistics for current covariance components model</H4> Deviance             
-          = 13350.711685<BR> Number of estimated parameters = 
-2<BR></BODY></HTML>
+          = 4285.343261<BR> Number of estimated parameters = 2<BR></BODY></HTML>
