--- a/manipulation/map2016/output/level1_models_wm_sample.html
+++ b/manipulation/map2016/output/level1_models_wm_sample.html
@@ -918,11 +918,11 @@ packages used):</p>
 
 <h2>[37] dichromat_2.0-0     testit_0.5          colorspace_1.2-6</h2>
 
-<h2>[40] stringi_1.1.1       acepack_1.3-3.3     munsell_0.4.3</h2>
+<h2>[40] stringi_1.1.1       acepack_1.3-3.3     lazyeval_0.2.0</h2>
 
-<h2>[43] chron_2.3-47</h2>
+<h2>[43] munsell_0.4.3       markdown_0.7.7      chron_2.3-47</h2>
 
-<p>Sys.time()## [1] &ldquo;2016-10-30 13:10:54 PDT&rdquo;</p>
+<p>Sys.time()## [1] &ldquo;2016-10-30 17:27:21 PDT&rdquo;</p>
 
 </body>
 
