--- a/manipulation/map2016/output/level1_models_wm_full.html
+++ b/manipulation/map2016/output/level1_models_wm_full.html
@@ -242,9 +242,9 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>(Intercept) -0.12210    0.01829  -6.674</h2>
 
-<p>fit0&lt;-model_0#yi= B0 + ei</p>
+<p>fit0&lt;-model_0</p>
 
-<h1>yi= B0j + B1j(time) + eij#B0j = gamma00 + gamme01 + U0j #int#B1j = gamma10 + gamme11  &mdash;  #slope#Time variable, Fixed Effects A&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-#year in studyeq_1a &lt;- as.formula(&ldquo;wm ~ 1 + year_in_study +</h1>
+<h1>yi= B0j + B1j(time) + eij#B0j = gamma00 +  U0j #int#B1j = gamma10 +  &mdash;  #slope#Time variable, Fixed Effects A&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-#year in studyeq_1a &lt;- as.formula(&ldquo;wm ~ 1 + year_in_study +</h1>
 
 <pre><code>                ( 1 |id)&quot;)model_1a&lt;- lmerTest::lmer(eq_1a, data=ds0, REML= FALSE) lmerTest::summary((model_1a))## Linear mixed model fit by maximum likelihood t-tests use Satterthwaite
 </code></pre>
@@ -293,7 +293,8 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>year_n_stdy -0.224</h2>
 
-<p>fit1a&lt;-model_1a#Time variable, Fixed Effects B&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;#age at visit, mean centered eq_1b &lt;- as.formula(&quot;wm ~ 1 + age_at_visit_meanc +<br/>
+<p>fit1a&lt;-model_1a( 0.2726 - 0.2293 ) /  0.2726  #15.88 % improved from Fully UCM deviance = 4034.5## [1] 0.1588408
+#Time variable, Fixed Effects B&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;#age at visit, mean centered eq_1b &lt;- as.formula(&quot;wm ~ 1 + age_at_visit_meanc +<br/>
                     (1  |id)&rdquo;)model_1b&lt;- lmerTest::lmer(eq_1b, data=ds0, REML= FALSE) lmerTest::summary((model_1b))## Linear mixed model fit by maximum likelihood t-tests use Satterthwaite</p>
 
 <h2>approximations to degrees of freedom [lmerMod]</h2>
@@ -340,9 +341,11 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>ag_t_vst_mn 0.036</h2>
 
-<p>fit1b &lt;-model_1b</p>
+<p>fit1b &lt;-model_1b( 0.2726 - 0.2297 ) /  0.2726  #15.73% improved from fully UCM, deviance =4029.8## [1] 0.1573734
+#ICC.498 / (.498 + .2297) #= 68% of the variance is due to between person differences ## [1] 0.6843479
+#(i.e. person average differences from the grand mean)</p>
 
-<h1>yi= B0j + B1j(time) + eij#B0j = gamma00 + gamme01 + U0j #int#B1j = gamma10 + gamme11 + U1j #slope#age_centeredeq_2 &lt;- as.formula(&ldquo;wm ~ 1 + age_at_visit_meanc +</h1>
+<h1>yi= B0j + B1j(time) + eij#B0j = gamma00  + U0j #int#B1j = gamma10  + U1j #slope#age_centeredeq_2 &lt;- as.formula(&ldquo;wm ~ 1 + age_at_visit_meanc +</h1>
 
 <pre><code>               ( 1 + age_at_visit_meanc |id)&quot;)model_2&lt;- lmerTest::lmer(eq_2, data=ds0, REML= FALSE) lmerTest::summary((model_2))## Linear mixed model fit by maximum likelihood t-tests use Satterthwaite
 </code></pre>
@@ -393,8 +396,10 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>ag_t_vst_mn 0.119</h2>
 
-<p>fit2&lt;-model_2
-#WMtest &lt;- as.formula(&quot;wm ~ 1 +<br/>
+<p>fit2&lt;-model_2( 0.2726 - 0.177382 ) /  0.2726  #= 34.9 % improved  # deviance = 3731.9  ## [1] 0.3492957
+#F.E versus F.E and R.E of time4029.8 - 3731.9 #= 297.9 #df= 5-4 = 1, SIG ## [1] 297.9</p>
+
+<p>#WMtest &lt;- as.formula(&quot;wm ~ 1 +<br/>
                    (1  |id)&rdquo;)model_test&lt;- lmerTest::lmer(test, data=ds0, REML= FALSE)lmerTest::summary((model_test))## summary from lme4 is returned</p>
 
 <h2>some computational error has occurred in lmerTest</h2>
@@ -431,7 +436,8 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>(Intercept) -0.12210    0.01829  -6.674</h2>
 
-<p>#PAtest &lt;- as.formula(&ldquo;physical_activity ~ 1 +<br/>
+<p>0.4719 / (0.4719 + 0.2726 ) # 63 % of the varience is explained at the between person level (average differences)## [1] 0.6338482
+#PAtest &lt;- as.formula(&ldquo;physical_activity ~ 1 +<br/>
                    (1  |id)&rdquo;)model_test&lt;- lmerTest::lmer(test, data=ds0, REML= FALSE)lmerTest::summary((model_test))## summary from lme4 is returned</p>
 
 <h2>some computational error has occurred in lmerTest</h2>
@@ -468,7 +474,8 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>(Intercept)  2.92178    0.06286   46.48</h2>
 
-<p>#Stresstest &lt;- as.formula(&ldquo;pss ~ 1 +<br/>
+<p>4.727/ (4.727+ 6.578) # 41% of the varience is exaplined  ## [1] 0.4181336
+#Stresstest &lt;- as.formula(&ldquo;pss ~ 1 +<br/>
                    (1  |id)&rdquo;)model_test&lt;- lmerTest::lmer(test, data=ds0, REML= FALSE)lmerTest::summary((model_test))## summary from lme4 is returned</p>
 
 <h2>some computational error has occurred in lmerTest</h2>
@@ -505,7 +512,7 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>(Intercept)   2.0213     0.0121     167</h2>
 
-<h1>yi= B0j + B1j(time) + B2j(PA) + eij#B0j = gamma00 + gamme01 + U0j #int#B1j = gamma10 + gamme11 + U1j #slope age#B2j = gamma10 + gamme11 +    #slope PA#person mean centered i.e. fluctuation (i.e. at times when people exercise more than usual)eq_3 &lt;- as.formula(&ldquo;wm ~ 1 + age_at_visit_meanc + phys_wp +</h1>
+<h1>yi= B0j + B1j(time) + B2j(PA) + eij#B0j = gamma00  + U0j #int#B1j = gamma10  + U1j #slope age#B2j = gamma10  +     #slope PA#6 parameters #person mean centered i.e. fluctuation (i.e. at times when people exercise more than usual)eq_3 &lt;- as.formula(&ldquo;wm ~ 1 + age_at_visit_meanc + phys_wp +</h1>
 
 <pre><code>               ( 1 + age_at_visit_meanc  |id)&quot;)model_3&lt;- lmerTest::lmer(eq_3, data=ds0, REML= FALSE)lmerTest::summary((model_3))## Linear mixed model fit by maximum likelihood t-tests use Satterthwaite
 </code></pre>
@@ -848,7 +855,10 @@ hist(ds0$wm) #relatively normal distfigure/Fully unconditional Level 1 model/ UC
 
 <h2>pss_wp      -0.006  0.031 -0.013</h2>
 
-<p>fit4&lt;-model_5</p>
+<p>fit4&lt;-model_5eq_6 &lt;- as.formula(&ldquo;wm ~ 1 + age_at_visit_meanc + phys_wp + pss_wp + phys_wp*pss_wp
+                   ( 1 + age_at_visit_meanc  |id)&rdquo;)model_6&lt;- lmerTest::lmer(eq_6, data=ds0, REML= FALSE)## Error: No random effects terms specified in formula
+lmerTest::summary((model_6))## Error in lmerTest::summary((model_6)): object &#39;model_6&#39; not found
+fit4&lt;-model_6## Error in eval(expr, envir, enclos): object &#39;model_6&#39; not found</p>
 
 <p>The R session information (including the OS info, R version and all
 packages used):</p>
@@ -873,9 +883,9 @@ packages used):</p>
 
 <h2>other attached packages:</h2>
 
-<h2>[1] ggplot2_2.1.0   outliers_0.14   magrittr_1.5    lmerTest_2.0-32</h2>
+<h2>[1] ggplot2_2.1.0   outliers_0.14   lmerTest_2.0-32 lme4_1.1-12</h2>
 
-<h2>[5] lme4_1.1-12     Matrix_1.2-6</h2>
+<h2>[5] Matrix_1.2-6    magrittr_1.5</h2>
 
 <h2>loaded via a namespace (and not attached):</h2>
 
@@ -885,11 +895,11 @@ packages used):</p>
 
 <h2>[7] rpart_4.1-10        evaluate_0.9        tibble_1.1</h2>
 
-<h2>[10] nlme_3.1-128        gtable_0.2.0        lattice_0.20-33</h2>
+<h2>[10] gtable_0.2.0        nlme_3.1-128        lattice_0.20-33</h2>
 
 <h2>[13] DBI_0.4-1           coda_0.18-1         gridExtra_2.2.1</h2>
 
-<h2>[16] stringr_1.0.0       knitr_1.13          dplyr_0.5.0</h2>
+<h2>[16] dplyr_0.5.0         stringr_1.0.0       knitr_1.13</h2>
 
 <h2>[19] cluster_2.0.4       grid_3.3.1          nnet_7.3-12</h2>
 
@@ -901,15 +911,15 @@ packages used):</p>
 
 <h2>[31] Hmisc_3.17-4        scales_0.4.0        MASS_7.3-45</h2>
 
-<h2>[34] splines_3.3.1       abind_1.4-3         assertthat_0.1</h2>
+<h2>[34] splines_3.3.1       abind_1.4-3         testit_0.5</h2>
 
-<h2>[37] dichromat_2.0-0     testit_0.5          colorspace_1.2-6</h2>
+<h2>[37] assertthat_0.1      dichromat_2.0-0     colorspace_1.2-6</h2>
 
 <h2>[40] stringi_1.1.1       acepack_1.3-3.3     munsell_0.4.3</h2>
 
 <h2>[43] markdown_0.7.7      chron_2.3-47</h2>
 
-<p>Sys.time()## [1] &ldquo;2016-10-30 19:37:58 PDT&rdquo;</p>
+<p>Sys.time()## [1] &ldquo;2016-10-31 10:55:07 PDT&rdquo;</p>
 
 </body>
 
